# collector

./: .bumpversion.cfg  .env  .gitignore  README.md  contours.py  pollenesia.service  postprocessing.py  pyproject.toml  setup.cfg  test2.py  utils.py
mqtt/: .gitignore  docker-compose.yml
nodered/: docker-compose.yml  flow.json
src/pollenesia/: collector.py  contours.py  db.py  postprocessing.py  test2.py
tests/: test1.py
