[metadata]
name = pollenesia
version = attr: pollenesia.__version__
author = pollenesiaproject
author_email = pollenesiaproject@gmail.com
description = Pellenesia controller software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pollenesia/collector
project_urls = 
	Discussion = https://github.com/pollenesia/collector/issues
classifiers = 
	Programming Language :: Python :: 3
	Operation System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >= 3.7
install_requires = 
	numpy
	matplotlib
	scipy
	h5py

[options.package_data]
* = data/*.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	pollenesia-run = pollenesia.reader:main
